# microservices-simulator

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  vcpkg.json
.github/workflows/: ci.yml
docs/: index.md
docs/flows/: batching.md  conditional-router.md  data-corruption.md  happy-path.md  latency.md  orphan-timeout.md  scatter-gather.md
src/: main.cpp
src/core/: logger.hpp  messages.hpp
